new text plus connectiooonss

--- a/Working Code/With Slider/html/35.html
+++ b/Working Code/With Slider/html/35.html
@@ -21,7 +21,9 @@ id="Soul">
             It is highly appreciated. <br><br>
             
             
-            Soultopilot has begun a recalibration.
+            Soultopilot's recalibration is in process.<br>
+
+            Soon you might be able to affect Sophie's life more.
         </h2>
             <p hidden id="anger">Anger</p>
     </div>
