--- a/Working Code/With Slider/html/49.html
+++ b/Working Code/With Slider/html/49.html
@@ -21,7 +21,9 @@ id="Soul">
             It is highly appreciated.
             <br><br>
             
-            Soultopilot has begun a recalibration.
+            There will be one more step needed to finish Soultopilot's adjustment to you.<br>
+
+            It seems like you are on your way to make a positive change.
         </h2>
             <p hidden id="anger">Anger</p>
     </div>
