--- a/Working Code/With Slider/html/54.html
+++ b/Working Code/With Slider/html/54.html
@@ -21,7 +21,15 @@ id="Soul">
             It is highly appreciated.
             <br><br>
             
-            Soultopilot has begun a recalibration.
+            Your answers have recalibrated Soultopilot. <br>
+
+            It's better adjusted to you now.<br><br>
+
+
+
+            Your anger levels have changed the following:<br>
+
+            &#x25B6; more assertive choices added
         </h2>
     </div>
     
