--- a/Working Code/With Slider/html/69.5.html
+++ b/Working Code/With Slider/html/69.5.html
@@ -16,23 +16,31 @@ id="Soul">
 
     <div class="content">
         <h2>
-            Thank you for your answer!<br>
+            Dear Soul 647, <br>
 
-            It is highly appreciated.
-            
-            <br><br>
-            Soultopilot is feeling confident in knowing you and it is going to keep its settings from now on.<br><br>
+Soultopilot is signaling a suspicion that an injustice has happened to Sophie. It seems to be affecting the following attribute: <br>
+Current life goal [Get a promotion]. <br>
+
+There is a possibility of a repair process being initialised, but more information needs to be gathered.<br><br>
 
 
 
-            You are now having more power over Sophie's life than Soul 223 did.
+Here follows an automatic message generated in cases like this:<br><br>
+
+
+
+"We want to remind you to keep your "head" up, as the humans say."
+
+
+
+
         </h2>
             <p hidden id="anger">Anger</p>
     </div>
     
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("71.html")>back to sophie</button><br><br>
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("69.html")>Continue</button><br><br>
 
     </div>
 
