text and transitions

--- a/Working Code/With Slider/html/110.html
+++ b/Working Code/With Slider/html/110.html
@@ -23,7 +23,7 @@ id="Sophie">
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("112.html")>Think through how to handle it</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("112.html")>Try to go to sleep now</button><br><br>     
        
     </div>
 
