--- a/Working Code/With Slider/html/113.html
+++ b/Working Code/With Slider/html/113.html
@@ -25,11 +25,17 @@ id="Sophie">
 
             Sophie answers:
 
+            <br>
+
+
+
+            Let's do it.
+
         </p>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("127.html")> Let's do it.</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("127.html")> Read a message from Soul 223</button><br><br>     
        
     </div>
 
