--- a/Working Code/With Slider/html/127.html
+++ b/Working Code/With Slider/html/127.html
@@ -16,16 +16,38 @@ id="Soul">
 
     <div class="content">
         <h2>
-            Dear Soul 647, <br><br><br>
+            "Dear Soul 647,<br><br>
 
 
 
-            your substitution has now come to an end. We have located Soul 223 and detected a signal it is sending to you. The analysis of your data will take several days. 
-            We will contact you once it is ready.<br><br>
-            
-            We thank you very much for this substitution and we will make sure your efforts are rewarded in your future lives.<br><br>
-            
-            In the meantime, you can read the message from Soul 223.<br><br>
+it's me again.<br>
+
+You made life-changing decisions for Sophie by being assertive and you prepared the ground for me, where I can now take over again.
+
+You can maybe guess now too, that it was probably because of the emotional abuse, that I was starting to lose the idea of who I even am. I didn't know it was "a thing"...<br><br>
+
+
+
+I can't imagine coming back to this life how it was before. Now I can finally enjoy being Sophie again. I almost forgot about all the plans I had for her. I can see clearly again, and that's all thanks to you and your actions. Your resilience, 
+the fact that you kept your own thinking and your own opinions. That you weren't avoiding your anger, that you dared to speak up for yourself. Or I mean, for Sophie.<br><br>
+
+
+
+They sent me a transcript of your decisions too. I will read it again every time I feel lost. To be inspired by you, to remember that to feel anger is as important as to feel joy. Hope, happiness. That it can motivate us, protect us.<br><br>
+
+I was manipulated by Alex, but someone like you, who was able to embrace their anger, was able to change things. You didn't hurt anyone with your anger, you just used it to be assertive, instead of repressing it.<br><br>
+
+I think it will help me reconstruct my identity.<br>
+
+I will not let anyone take my anger from me again.<br><br>
+
+
+
+Soul 647, thank you.<br><br>
+
+For daring to feel.<br><br>
+
+For saving Sophie."<br><br>
         </h2>
     </div>
 
