--- a/Working Code/With Slider/html/92.html
+++ b/Working Code/With Slider/html/92.html
@@ -34,7 +34,7 @@ id="Sophie">
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("116.html")>Explain</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("94.5.html")>Read a secret message from Soul 223</button><br><br>     
 
     </div>
 
