--- a/Working Code/With Slider/html/87.html
+++ b/Working Code/With Slider/html/87.html
@@ -28,7 +28,7 @@ id="Sophie">
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("91.html")>Don't say anything more, just go for the walk.</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("91.html")>Don't say anything more, just go for a walk.</button><br><br>     
         <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("90.html")>"I don't think I look at all that bad, but the talking to you makes me feel unwell."</button><br><br>     
     </div>
 
