--- a/Working Code/With Slider/html/94.5.html
+++ b/Working Code/With Slider/html/94.5.html
@@ -22,7 +22,7 @@ I hope I don't interrupt, but I have felt that a change is happening in Sophie's
 
 First, I want to apologise for escaping earlier on, but this was my first life and I simply didn't know how to handle it.
 
-It was like I was losing myself, not knowing what I think anymore..
+It was like I was losing myself, not knowing what I think anymore..<br>
 
 I have been observing you for a while now, I'm sorry. I hope you don't mind. But you are my inspiration, Soul 647. You have already changed a lot, even if you're not aware. I would have never gotten to where you are now. I was wondering why that is and I think I know.<br><br>
 
