--- a/Working Code/With Slider/html/91.html
+++ b/Working Code/With Slider/html/91.html
@@ -16,7 +16,7 @@ id="Sophie">
 
     <div class="content">
         <p>
-            Sophie's heart is racing when beginning her walk. She decides to call Josef to see if he wants to hang out. Josef and Sophie have known each other for a long time. 
+            Sophie went for a walk. Her heart is racing and she can't calm down. She decides to call Josef to see if he wants to hang out. Josef and Sophie have known each other for a long time. 
             Their parents were neighbors so they have grown up with each other, playing almost every day. <br><br>
 
             She needs to get better thoughts and just have someone to talk to.
