--- a/Working Code/Without Slider/css/html/80.html
+++ b/Working Code/Without Slider/css/html/80.html
@@ -15,7 +15,7 @@ id="Sophie">
 
 
     <div class="content">
-        The run helped Sophie get some of the energy out, but she was still not at peace.<br><br><br>
+        <p The run helped Sophie get some of the energy out, but she was still not at peace.<br><br><br>
 
        
         When she got back Alex was already home.<br><br>
