--- a/Working Code/Without Slider/css/html/16.html
+++ b/Working Code/Without Slider/css/html/16.html
@@ -58,7 +58,7 @@
     <br>
     <br>
 
-    <p id="emotion"></p>
+    <p hidden id="emotion"></p>
 
     <script src="..\js\angermeter.js"></script>
 
