--- a/Working Code/Without Slider/css/html/81.html
+++ b/Working Code/Without Slider/css/html/81.html
@@ -31,7 +31,7 @@ id="Sophie">
             "What about those small white ones, that you have in the drawer of your night table?"<br><br>
             
             "I haven't taken those for ages. And it was just during that time when I couldn't fall asleep, remember? 
-            I don't even have that problem anymore, since I started with meditation." <br><br>
+            I don't even have that problem anymore, since I started meditating." <br><br>
             
             "So what do you want from me now with this talk?"</i>  
         </p>  
