--- a/Working Code/Without Slider/css/html/80.html
+++ b/Working Code/Without Slider/css/html/80.html
@@ -15,11 +15,12 @@ id="Sophie">
 
 
     <div class="content">
-        <p>The run helped Sophie get some of the energy out, but she was still not at peace.<br><br><br>
+        <p>
+            The run helped Sophie get some of the energy out, but she was still not at peace.<br><br><br>
 
             When she got back Alex was already home.<br><br>
 
-            <i> “Why does it look like you've been crying?”</i> he said.<br><br>
+            <i>“Why does it look like you've been crying?”</i> he said.<br><br>
 
             <i>“I did not get the promotion”</i>, Sophie started. Still not sure how to ask him about what her boss told her.<br><br>
 
@@ -27,7 +28,8 @@ id="Sophie">
 
             “But I have worked really hard for it. And he gave the promotion to another guy at my job that has only worked there for two years. It is not fair.”<br><br>
 
-            “I'm sure he has his reasons. Now you don’t need to spend more time at work and don't have to  be so tired all the time when you are home.”</i></p> 
+            “I'm sure he has his reasons. Now you don’t need to spend more time at work and don't have to  be so tired all the time when you are home.”</i>
+        </p> 
     </div>
 
     <div class="choices">
