--- a/Working Code/Without Slider/css/html/91.html
+++ b/Working Code/Without Slider/css/html/91.html
@@ -17,7 +17,7 @@ id="Sophie">
     <div class="content">
         <p>
             Sophie's heart is racing when beginning her walk. She decides to call Josef to see if he wants to hang out. Josef and Sophie have known each other for a long time. 
-            Their parents were neighbors so they have grown up with each other, playing almost every day. <br><br>
+            Their parents were neighbors so they have grown up together, playing almost every day. <br><br>
 
             She needs to get better thoughts and just have someone to talk to.
             <br><br><br><br>
