--- a/Working Code/Without Slider/css/html/94.5.html
+++ b/Working Code/Without Slider/css/html/94.5.html
@@ -24,13 +24,13 @@ First, I want to apologise for escaping earlier on, but this was my first life a
 
 It was like I was losing myself, not knowing what I think anymore..
 
-I have been observing you for a while now, I'm sorry. I hope you don't mind. But you are my inspiration, Soul 647. You have already changed a lot, even if you're not aware. I would have never gotten to where you are now. I was wondering why that is and I think I know.<br><br>
+I have been observing you for a while now, I'm sorry. I hope you don't mind. But you are my inspiration, Soul 647. You have already changed a lot, even if you're not aware. I would have never gotten to where you are now. I was wondering why that is and I think I know now.<br><br>
 
 
 
 Your anger levels.<br>
 
-They are different from how mine used to be. I was never angry... Or at least so I thought. I think every time I thought I might be feeling anger, Alex made it seem like I'm being wrong, so I just suppressed it. Or directed it against me..
+They are different from how mine used to be. I was never angry... Or at least so I thought. I think every time I thought I might be feeling anger, Alex made it seem like I'm being wrong, so I just repressed it. Or directed it against me..
 
 So anger is a negative emotion, but it seems like you can use it for something positive? Maybe once you admit it, it becomes a tool for you. Like a hammer, that you can use to destruct or construct.
 
