visuals mostly I think

--- a/Michaela/With Slider/html/23.html
+++ b/Michaela/With Slider/html/23.html
@@ -18,7 +18,7 @@ id="Sophie">
     <br>
     <br>
     <div class="content">
-        <h2 id ="text">Sophie woke up in an extra great mood. She felt very motivated and excited to start working.
+        <h2 id ="text" style="color:whitesmoke">Sophie woke up in an extra great mood. She felt very motivated and excited to start working.
             Today she has to prepare a presentation for next week and wanted to make it look extra nice, in case she
             gets asked to present her suggestions for business strategies.
 
