--- a/Michaela/With Slider/html/24.html
+++ b/Michaela/With Slider/html/24.html
@@ -15,7 +15,7 @@
 
 
     <div class="content">
-        <h2 id="text">Okay.
+        <h2 id="text" style="color:black">Okay.
 
             Now the font style?</h2>
 
@@ -36,8 +36,8 @@
 
     <script>
         document.body.style.backgroundColor = localStorage.getItem("color");
-        document.getElementById("text").style.color = "white";
-        document.getElementById("myBtn1").style.color = "white";
+        document.getElementById("text").style.color = "black";
+        document.getElementById("myBtn1").style.color = "black";
     </script>
 
     <script type="text/javascript" src="../js/script.js"></script>
