--- a/Michaela/With Slider/html/25.html
+++ b/Michaela/With Slider/html/25.html
@@ -14,7 +14,7 @@
 
 
     <div class="content">
-        <h2 id="text">Great.
+        <h2 id="text" style="color:black">Great.
 
             That's for the visuals.
 
@@ -35,9 +35,9 @@
         document.getElementById("text").style.fontFamily = localStorage.getItem("font");
         document.getElementById("myBtn1").style.fontFamily = localStorage.getItem("font");
         document.getElementById("myBtn2").style.fontFamily = localStorage.getItem("font");
-        document.getElementById("text").style.color = "white";
-        document.getElementById("myBtn1").style.color = "white";
-        document.getElementById("myBtn2").style.color = "white";
+        document.getElementById("text").style.color = "black";
+        document.getElementById("myBtn1").style.color = "black";
+        document.getElementById("myBtn2").style.color = "black";
     </script>
 
     <script type="text/javascript" src="../js/script.js"></script>
