--- a/Michaela/With Slider/html/26.html
+++ b/Michaela/With Slider/html/26.html
@@ -14,7 +14,7 @@
 
 
     <div class="content">
-        <h2 id="text">Awesome.
+        <h2 id="text" style="color:black">Awesome.
 
             The rest she figured out. Just a few changes might be needed later.</h2>
 
@@ -29,9 +29,9 @@
 
     <script>
         document.body.style.backgroundColor = localStorage.getItem("color");
-        document.getElementById("text").style.color = "white";
-        document.getElementById("myBtn1").style.color = "white";
-        document.getElementById("myBtn2").style.color = "white";
+        document.getElementById("text").style.color = "black";
+        document.getElementById("myBtn1").style.color = "black";
+        document.getElementById("myBtn2").style.color = "black";
     </script>
 
     <script type="text/javascript" src="../js/script.js"></script>
