--- a/Michaela/With Slider/html/7.html
+++ b/Michaela/With Slider/html/7.html
@@ -29,7 +29,10 @@ id="Sophie">
             It is Sunday morning and Sophie and Alex are having scones. They have it as a little tradition to always makes scones on Sundays to enjoy the morning together. 
             Tonight they are going to their friends that live out of town.<br><br>
             
-            <i>“Okay, should we leave a bit earlier to have time for the walk? You know by the lake that is on the way there?”</i>
+            <i>“Okay, should we leave a bit earlier to have time for the walk? You know by the lake that is on the way there?”</i><br><br>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            (Choose what Sophie should answer.)
             
             </p>
     </div>
