--- a/Michaela/With Slider/html/2.html
+++ b/Michaela/With Slider/html/2.html
@@ -23,8 +23,10 @@ id="soul">
         <h2>Now that you know how to navigate, you can enjoy your free time and explore around, meet up with some old soulmates, 
             try to create good secret signals to be able to reunite when on Earth. <br><br>
 
-            Some examples to help you are: choose the same sense of humor, <br>
-            choose a place where you will meet, sketch out what your faces will look like approximately...</h2>
+            Some examples to help you are: <br>
+            choose the same sense of humor, <br>
+            choose a place where you will meet, <br>
+            sketch out what your faces will look like approximately...</h2>
     </div>
     
     <div class="choices">
