edits to make sense and so, give a bit more chance

--- a/Michaela/With Slider/html/116.html
+++ b/Michaela/With Slider/html/116.html
@@ -16,7 +16,9 @@ id="Sophie">
 
     <div class="content">
         <p>
-            Before Sophie started to get ready she checked her phone and noticed her Facebook account was hacked. Could this day get any better? <br><br>
+            Sophie tried to push her emotions aside and went to get ready.
+
+ <br><br>
 
 
 
