--- a/Michaela/With Slider/html/24.html
+++ b/Michaela/With Slider/html/24.html
@@ -37,7 +37,7 @@
     <script>
         document.body.style.backgroundColor = localStorage.getItem("color");
         document.getElementById("text").style.color = "black";
-        document.getElementById("myBtn1").style.color = "black";
+        document.getElementById("myBtn1").style.color = "white";
     </script>
 
     <script type="text/javascript" src="../js/script.js"></script>
