--- a/Michaela/With Slider/html/59.html
+++ b/Michaela/With Slider/html/59.html
@@ -16,21 +16,18 @@ id="Sophie">
 
     <div class="content">
         <p>
-            <i> "Yes, I am afraid the decision is indeed final!"</i> her boss answered.<br><br>
+            <i> "Yes, I am afraid the decision is indeed final!"</i> Her boss answered.
 
 
 
-            Sophie said goodbye to her boss and left his office. She thought maybe her boss is right about this. After all, he was the boss so he might know better!<br><br>
-
-
-
-            But either way, she was very excited about this, she worked hard for this, so she is very upset about it.
+            <i>"At least you will have more time to rest, with your situation right now..."</i>
         </p>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("72.html")>Continue</button><br><br>     
-        
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("72.html")>"I guess rest is good.."</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("62.html")>"My situation? What do you mean exactly?"</button><br><br>     
+
     </div>
 
 
