--- a/Michaela/With Slider/html/83.html
+++ b/Michaela/With Slider/html/83.html
@@ -16,8 +16,8 @@ id="Sophie">
 
     <div class="content">
         <p>
-            <i>"Now you know. I really did it just because I care about you."</i> Alex said <br><br>
-            <i>"Now, let's forget about it and go get ready for dinner." </i>he continued.
+            <i>"Yeah or maybe find a different job, if you're not good at this one,"</i> Alex said. <br><br>
+            <i>"Now, let's forget about it and go get ready for dinner." </i>He continued.
     
         </p>
     </div>
