--- a/Michaela/With Slider/html/92.html
+++ b/Michaela/With Slider/html/92.html
@@ -28,7 +28,7 @@ id="Sophie">
 
             "It is serious, I think, but I called you because my Facebook account got hacked a few days ago, that's another story.."<br><br>
 
-            "Oh, so what's the deal?" </i>
+            "Oh, that must be annoying... So what's the deal?" </i>
     
         </p>
     </div>
