--- a/Michaela/With Slider/html/36.html
+++ b/Michaela/With Slider/html/36.html
@@ -17,10 +17,9 @@
     <br>
     <br>
     <div class="content">
-        <p>Sophie has a yearly buffé with her friends which falls on this Saturday. <br><br>
+        <p>
 
-            <i>“Hey Sophie!”<i> Sophie could see her friends waving at her. Alex spent the whole morning trying to get Sophie to not go because he wanted a movie night. 
-            But it is tradition to go once a year, so Sophie really didn’t want to miss it. <br><br>
+            <i>“Hey Sophie!”<i> Sophie could see her friends waving at her.  <br><br>
 
             *message sound*<br><br>
             
