--- a/Michaela/With Slider/html/56.html
+++ b/Michaela/With Slider/html/56.html
@@ -25,7 +25,8 @@ id="Sophie">
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("72.html")>Go back to work</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("72.html")>Go back to work</button><br><br>
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("57.html")>Talk to a friend</button><br><br>        
   
     </div>
 
