--- a/Michaela/With Slider/html/60.html
+++ b/Michaela/With Slider/html/60.html
@@ -27,10 +27,11 @@ id="Sophie">
             "Why should it be better like this? I don't understand."<br><br>
 
             "For you, so you don't need to stress so much. It would bring many new responsibilities, 
-            the pressure could increase. You know, I was thinking, we can even agree to give you one 
-            extra day off per week. You've been working here for a long time. You deserve it! So you 
-            will have more time to rest. I really value your work Sophie, don't let this discourage you. 
-            I'm sure there will be another time." </i>
+            the pressure could increase. You know, I was thinking, we can even agree to give you one extra day off per week, 
+            until you get better. You've been working here for a long time, this is the least I can do for you. 
+            So you will have more time to rest. I really value your work Sophie, don't let this discourage you. 
+            I'm sure there will be another time. 
+            With your situation right now, I think this will be best for everyone.." </i>
   
         </p>
         <p hidden id="anger">Anger</p>
@@ -38,7 +39,7 @@ id="Sophie">
 
     <div class="choices">
         <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("61.html")>"Thank you, I guess I was just hoping that time could be now.."</button><br><br>     
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("62.html")>"More time to rest? I don't need more time to rest. I don't understand at all," </button><br><br>     
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("62.html")>"My situation? What do you mean exactly?" </button><br><br>     
     </div>
 
 
