--- a/Michaela/With Slider/html/85.html
+++ b/Michaela/With Slider/html/85.html
@@ -24,11 +24,13 @@ id="Sophie">
   
             
             "Now let's get ready for dinner."</i> Alex added.       
+            
         </p>
     </div>
 
     <div class="choices">
         <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("116.html")>Get ready</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("84.html")>"Wait, just tell me again, what exactly did you say to him?"</button><br><br>     
 
     </div>
 
