--- a/Michaela/With Slider/html/55.html
+++ b/Michaela/With Slider/html/55.html
@@ -15,8 +15,9 @@ id="Sophie">
 
 
     <div class="content">
-        <p>
-            So now even the presentation that Sophie prepared was just wasted time.<br><br>
+        <p>...<br><br>
+            So now even the presentation cannot be used. All the preparation Sophie put into it was just wasted time.<br><br>
+            ...<br><br>
 
             She came early today. There are still 15 minutes left before her work starts officially. 
         </p>  
