--- a/Michaela/With Slider/html/3.html
+++ b/Michaela/With Slider/html/3.html
@@ -35,10 +35,10 @@ id="soul">
     </div>
 
     <div class="colors">
-        <img id="back1" class="back1" onclick=changeBackgroundPic1() src="/Michaela/With Slider/background1.jpg" />
-        <img id="back2" class="back2" onclick=changeBackgroundPic2() src="/Michaela/With Slider/background2.jpg" />
-        <img id="back3" class="back3" onclick=changeBackgroundPic3() src="/Michaela/With Slider/background3.jpg" />
-        <img id="back4" class="back4" onclick=changeBackgroundPic4() src="/Michaela/With Slider/background4.jpg" />
+        <img id="back1" class="back1" onclick=changeBackgroundPic1() src="../background1.jpg" />
+        <img id="back2" class="back2" onclick=changeBackgroundPic2() src="../background2.jpg" />
+        <img id="back3" class="back3" onclick=changeBackgroundPic3() src="../background3.jpg" />
+        <img id="back4" class="back4" onclick=changeBackgroundPic4() src="../background4.jpg" />
          
     </div>
 
