--- a/Michaela/With Slider/html/86.html
+++ b/Michaela/With Slider/html/86.html
@@ -16,7 +16,7 @@ id="Sophie">
 
     <div class="content">
         <p>
-            <i> "He needs to know who the person he is promoting really is. <br><br>
+            <i> "Ah...He needs to know who the person he is promoting really is. <br><br>
             I got the impression he didn't have a complete picture of you, 
             so I just clarified a few things. Can you stop obsessing over it now? <br><br>
             I think you should really cool off, it's so unattractive. 
