--- a/Michaela/With Slider/html/89.html
+++ b/Michaela/With Slider/html/89.html
@@ -24,16 +24,19 @@ id="Sophie">
 
 "I guess..It just. It came a bit as a shock. He promised me the promotion and.."<br><br>
 
-"You know how work life is, when you don't have a signed paper for something, nothing is certain."</i><br><br><br>
+"You know how work life is, when you don't have a signed paper for something, nothing is certain. 
+I told you to not get too excited about it..."</i><br><br><br>
 
 
 
-Sophie left to go to her room. <i>"Yeah, just leave this."</i> Alex said. <i>Now let's get ready for dinner."</i> Alex added.
+Sophie left to go to her room. <i>"Yeah, just leave this."</i> Alex said. <i>"Now let's get ready for dinner."</i> Alex added.
         </p>
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("116.html")>Get ready</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("116.html")>Get ready</button><br><br>   
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("86.html")>"I still don't get why you talked to him behind my back."</button><br><br>     
+  
 
     </div>
 
