--- a/Michaela/With Slider/html/75.html
+++ b/Michaela/With Slider/html/75.html
@@ -22,7 +22,7 @@ id="Sophie">
 
             <i> “Why does it look like you've been crying?”<i> he said.<br><br>
 
-            <i>“I did not get the promotion”</i>, Sophie started. Still not sure how to ask him about what her boss told her.<br><br>
+            <i>“I did not get the promotion,”</i> Sophie started. Still not sure how to ask him about what her boss told her.<br><br>
 
             <i>“But why are you crying over it? It’s not a life or death situation.”<br><br>
 
