--- a/Michaela/Only indignant path copy/html/97.html
+++ b/Michaela/Only indignant path copy/html/97.html
@@ -25,7 +25,7 @@ id="Sophie">
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("105.html")>Thank you Josef</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("105.html")>"Thank you, Josef"</button><br><br>     
 
     </div>
 
