--- a/Mahroo/Physical version/html/16.html
+++ b/Mahroo/Physical version/html/16.html
@@ -15,9 +15,10 @@
         <div>
             <h2> Hi there Soul 647,<br>
                 to keep track of your emotional state, please report how you feel regarding the following
-                emotion:  Anger</h2>
+                emotion:  Anger<br><br>
+            Confirm when the value is where you want it.</h2>
             <h2>
-                Press save to report.
+                
             </h2>
         </div>
         <div>
@@ -40,11 +41,10 @@
             </div>
         </div>
         <div>
-            <div class="buttonSave">
-                <button id="saveBtn" class="saveBtn" onclick="saveValue()">Save</button>
-            </div>
+       
             <div class="choices">
-                <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("17.html")>continue</button>
+                <button id="myBtn1" class="myBtn1" type="input" onclick=inDataStore()>confirm</button><br><br>
+                <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("17.html")>continue</button><br><br>
             </div>
         </div>
     </div>
