--- a/Mahroo/Physical version/html/69.html
+++ b/Mahroo/Physical version/html/69.html
@@ -14,10 +14,9 @@
     <div>
         <div>
             <h2> To keep track of your emotional state, please report how you feel regarding the following
-                emotion: Anger</h2>
-            <h2>
-                Press save to report.
-            </h2>
+                emotion: Anger<br><br>
+            Confirm when the value is where you want it.</h2>
+            
         </div>
         <div>
             <div class="w3-container">
@@ -39,11 +38,10 @@
             </div>
         </div>
         <div>
-            <div class="buttonSave">
-                <button id="saveBtn" class="saveBtn" onclick="inDataStore()">Save</button>
-            </div>
+            
             <div class="choices">
-                <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("70.html")>continue</button>
+                <button id="myBtn1" class="myBtn1" type="input" onclick=inDataStore()>Confirm</button><br><br>
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("70.html")>continue</button><br><br>
             </div>
         </div>
     </div>
