--- a/Michaela/New Digital version copy/html/90.html
+++ b/Michaela/New Digital version copy/html/90.html
@@ -22,8 +22,7 @@ id="Sophie">
     </div>
 
     <div class="choices">
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("91.html")>"Okay Alex, see you later."</button><br><br>     
-        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("91.html")>"I'm sensitive just the right amount. But why am I even talking to you still.."</button><br><br>     
+        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("48.html")>Continue</button><br><br>     
     </div>
 
 
