--- a/Michaela/New Digital version copy/html/98.html
+++ b/Michaela/New Digital version copy/html/98.html
@@ -24,9 +24,9 @@ id="Sophie">
 
            
 
-            <i>“You have a very lovely boyfriend, you are lucky!”</i> The waiter answered.<br><br>
+            <i>“You have a very lovely boyfriend, you are lucky!”</i> The waiteress answered.<br><br>
 
-            <i>“Thank you very much for the help...”</i> he looked at her name tag. <i>"...Zoey"</i> Alex said to the waiter and smiled.
+            <i>“Thank you very much for the help...”</i> he looked at her name tag. <i>"...Zoey"</i> Alex said to the waiteress and smiled.
         </p>
     </div>
 
