--- a/Working Code/Without Slider/css/html/16.html
+++ b/Working Code/Without Slider/css/html/16.html
@@ -13,16 +13,13 @@
 <body>
 
 
-    <div class="content">
-
-        <h2 id="question">
-            Hi there Soul 647, to keep track of your emotional state, please report how you feel regarding the following
-            emotion:<br><br>
+    <div>
+        <h2> Hi there Soul 647,<br>
+            to keep track of your emotional state, please report how you feel regarding the following
+            emotion:  Anger<br><br>
+        Confirm when the value is where you want it.</h2>
+        <h2>
             
-            Anger <br><br>
-
-
-            (Indicate for 3 seconds to stabilise the value.)
         </h2>
     </div>
 
