--- a/Michaela/Intro/html/0.1.html
+++ b/Michaela/Intro/html/0.1.html
@@ -21,7 +21,7 @@ id="soul" >
 
 <script>
   setTimeout(function() {
-      changePage("0.html"); 
+      changePage("introduction.html"); 
   }, 9000);
   </script>
 
