--- a/Michaela/Intro/html/introduction.html
+++ b/Michaela/Intro/html/introduction.html
@@ -17,17 +17,17 @@
 
 <body onload="init()"
 id="soul" >
-<script>
+<!--<script>
   setTimeout(function() {
       changePage("intro.2.html"); 
   }, 4000);
-  </script> 
+  </script> -->
 
 
 
 
 
-<h1 class="ml12">You have been selected to substitute Soul 223, who has escaped the body of Sophie Stavoc without permission.<br /><br />
+<h1 class="ml12">Will you turn your anger into something good?<br /><br />
             
         
     </h1>
@@ -70,11 +70,6 @@ anime.timeline({loop: false})
     </script>
 
     <script type="text/javascript" src="../js/script.js"></script>
-    <script>
-      setTimeout(function() {
-          changePage("intro.2.html"); 
-      }, 4000);
-      </script> 
 </body>
 
 </html>
