small things plus edited ending

--- a/Michaela/Only indignant path copy/html/113.html
+++ b/Michaela/Only indignant path copy/html/113.html
@@ -16,6 +16,7 @@ id="Sophie">
     <div class="content">
         <p>
             *message sound*<br>
+            <br>
 
 
 
@@ -23,12 +24,13 @@ id="Sophie">
 
 
 
-            Sophie answers:
+            Sophie answers:<br>
+
 
             <br>
 
 
-
+<!--                        ...<br><br>-->            
             Let's do it.
 
         </p>
