--- a/Michaela/Only indignant path copy/html/128.html
+++ b/Michaela/Only indignant path copy/html/128.html
@@ -28,11 +28,18 @@ We thank you very much for this substitution and we will make sure your efforts 
 
 Results:<br><br>
 
-&#x25B6; Enough data was gathered to start a repair process regarding the following attribute: Current life goal [Get a promotion]. An opportunity will be created to establish justice.<br><br>
+&#x25B6; Enough data was gathered to start a repair process regarding the following attribute: Current life goal [Get a promotion]. <br>
+An opportunity will be created to establish justice.<br><br>
 
 &#x25B6; Soul 556, known under the name of Alexander Henderson, has been reported and a further investigation will take place in the following days.<br><br>
 
 &#x25B6; You helped with identifying a new virus, currently under the code <i>Emotional abuse</i>, which seems to be widespread.<br><br>
+
+&#x25B6; Soul 223 no longer perceives anger as a forbidden emotion. It has learned to listen to it and is ready to use it as a tool in the future for 
+any of the following: 
+<b>[Stand up for itself or others]
+     [Be aware of injustice] 
+     [Be motivated to create change]</b><br><br>
 
 Thank you again for reporting your emotions genuinely, it has shown to be useful for more than just filling in the database.<br><br>
             
