--- a/Michaela/Only indignant path copy/html/60.html
+++ b/Michaela/Only indignant path copy/html/60.html
@@ -17,9 +17,9 @@ id="Sophie">
     <div class="content">
         <p>
             <i>"...plus Daniel has only been here for two years.. 
-            I have worked so hard for four years to get this promotion.” 
+            I have worked so hard for four years to get this promotion.” </i>
             Sophie continued. She could feel the tears trying to push forward, 
-            but wanted to look professional in front of her boss. “Why did you change your mind? 
+            but wanted to look professional in front of her boss. <i>“Why did you change your mind? 
             What did I do wrong?” <br><br>
 
             "You haven't done anything wrong, I just believe it will be better like this."<br><br>
