--- a/Michaela/Only indignant path copy/html/84.html
+++ b/Michaela/Only indignant path copy/html/84.html
@@ -16,8 +16,8 @@ id="Sophie">
 
     <div class="content">
         <p>
-            <i>"I just told him how things are, when he asked. If he decided to promote someone else, <br><br>
-            I'm sure he had a reason for it. Don't try to blame me for not being able to get a promotion in four years..."</i>
+            <i>"I just told him how things are, when he asked. If he decided to promote someone else, 
+            I'm sure he had a reason for it. <br>Don't try to blame me for not being able to get a promotion in four years..."</i>
                    
         </p> 
         <p hidden id="anger">Anger</p>
