--- a/Michaela/Only indignant path copy/html/85.html
+++ b/Michaela/Only indignant path copy/html/85.html
@@ -20,7 +20,7 @@ id="Sophie">
 
             "I guess..It just. It came a bit as a shock. He promised me the promotion and.."<br><br>
 
-            "You know how work life is, when you don't have a signed paper for something, nothing is sure."<br><br>
+            "You know how work life is, when you don't have a signed paper for something, nothing is certain."<br><br>
   
             
             "Now let's get ready for dinner."</i> Alex added.       
@@ -30,7 +30,7 @@ id="Sophie">
 
     <div class="choices">
         <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("116.html")>Get ready</button><br><br>     
-        <button id="myBtn1" class="myBtn1" type="input" onclick=changePage("84.html")>"Wait, just tell me again, what exactly did you say to him?"</button><br><br>     
+        <button id="myBtn2" class="myBtn2" type="input" onclick=changePage("84.html")>"Wait, just tell me again, what exactly did you say to him?"</button><br><br>     
 
     </div>
 
