--- a/Michaela/Only indignant path copy/html/98.html
+++ b/Michaela/Only indignant path copy/html/98.html
@@ -22,9 +22,9 @@ id="Sophie">
 
             When we came to the table there was a bouquet of roses on Sophie's side.<br><br>
 
-            <i>“Is this for me?”</i> Sophie asked and looked at the waiter.<br><br>
+            <i>“Is this for me?”</i> Sophie asked and looked at the waitress.<br><br>
 
-            <i>“You have a very lovely boyfriend, you are lucky!”</i> The waiter answered.<br><br>
+            <i>“You have a very lovely boyfriend, you are lucky!”</i> The waitress answered.<br><br>
 
             <i>“Thank you very much for the help...”</i> he looked at her name tag. <i>"...Zoey"</i> Alex said to the waiter and smiled.
         </p>
